--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   <div class="content-text">
                     <h3 class="line-title">B.Tech,Mechanical Engineer - CVR College of Engineering</h3>
                     <span>2015 - 2019</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <p class="line-text">Successfully completed my B.Tech in Mechanical Engineering domain with a grade of 9.3 CGPA</p>
                   </div>
                 </li>
                 <!-- <li>
@@ -313,14 +313,14 @@
                   <div class="content-text">
                     <h3 class="line-title">Video Editor and Graphic Designer - Sillymonks</h3>
                     <span>2021 - 2022</span>
-                    <p class="line-text">Collaboratedwithcross-functional teams to successfully execute communication plans and meet project goals</p>
+                    <p class="line-text">Collaborated with different teams to bring their ideas to life.Effectively managed timelines, prioritized workloads, and sought direction when necessary to meet project deadlines.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Customer Service Representative - Amazon India</h3>
                     <span>2020 - 2021</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <p class="line-text">Demonstrated strong communication skills and  Thrived in a high-energy environment, quickly adapting to changes and efficiently multitasking to meet customer needs while maintaining a customer-centric focus.</p>
                   </div>
                 </li>
               </ul>
@@ -384,7 +384,7 @@
                       <a class="lightbox preview" href="https://github.com/siddharthcode98/covid19Dashboard_miniproject.git" target="_blank">
                         <i class="icon-social-github"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://siddharthvaddemanicoviddashboard.netlify.app" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
